packages/itwinui-css/src/avatar/avatar.scss
// Copyright (c) Bentley Systems, Incorporated. All rights reserved.
// See LICENSE.md in the project root for license terms and full copyright notice.
@use '../mixins';
@use './mixins' as *;

$avatar-text-color: hsl(0 0% 0% / 0.6); // same as badge, meets AA contrast against soft backgrounds

.iui-avatar {
  @include mixins.iui-reset;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  position: relative;
  inline-size: var(--_iui-avatar-size);
  block-size: var(--_iui-avatar-size);
  background-color: var(--iui-color-background-seagreen);
  border-radius: 50%;
  font-weight: var(--iui-font-weight-semibold);
  text-align: center;
  text-transform: uppercase;
  color: #{$avatar-text-color};
  line-height: var(--_iui-avatar-size);
  font-size: var(--_iui-avatar-font-size);

  &::before {
    content: '';
    position: absolute;
    inset: 0;
    border-radius: 50%;
    box-shadow: inset 0 0 0 var(--iui-size-3xs) hsl(var(--iui-color-foreground-hsl) / var(--iui-opacity-5));
  }

  svg {
    display: inline-flex;
    inline-size: 50%;
    block-size: 50%;
    position: absolute;
    fill: $avatar-text-color;
    inset-inline-start: 50%;
    inset-block-start: 50%;
    transform: translate(-50%, -50%);
  }

  > img {
    display: block;
    position: absolute;
    object-fit: cover;
    inset: 0;
    max-inline-size: 100%;
    border-width: 0;
    border-radius: 50%;
    background-color: var(--iui-color-background);
  }

  &[data-iui-status] {
    &::after {
      content: '';
      box-sizing: content-box;
      display: flex;
      align-items: center;
      justify-content: center;
      position: absolute;
      inset-inline-end: calc(0px - var(--iui-size-3xs));
      inset-block-end: calc(0px - var(--iui-size-3xs));
      inline-size: 25%;
      block-size: 25%;
      border-radius: 50%;
      border: var(--iui-size-3xs) solid var(--iui-color-background);
      background: var(--_iui-avatar-status-img) no-repeat center / var(--_iui-avatar-status-size, var(--iui-size-xs));
      background-color: var(--iui-color-border);
    }
  }

  &[data-iui-status='online'] {
    &::after {
      --_iui-avatar-status-img: url("data:image/svg+xml,<svg fill='white' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path d='M6,14L0,8l2-2l4,4l8-8l2,2L6,14z' /></svg>");
      background-color: var(--iui-color-background-positive);
    }
  }

  &[data-iui-status='away'] {
    &::after {
      --_iui-avatar-status-img: url("data:image/svg+xml,<svg fill='white' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'><path d='m13.445 12.832-6.445-4.297v-7.535h2v6.465l5.555 3.703z' /></svg>");
      background-color: var(--iui-color-background-warning);
    }
  }

  &[data-iui-status='busy'] {
    &::after {
      --_iui-avatar-status-img: url("data:image/svg+xml,<svg fill='white' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect x='2' y='7' width='12' height='2'></rect></svg>");
      background-color: var(--iui-color-background-negative);
    }
  }

  &[data-iui-status='offline'] {
    &::after {
      --_iui-avatar-status-img: url("data:image/svg+xml,<svg fill='white' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'><path d='m12.5 2-4.5 4.5-4.5-4.5-1.5 1.5 4.5 4.5-4.5 4.5 1.5 1.5 4.5-4.5 4.5 4.5 1.5-1.5-4.5-4.5 4.5-4.5z' /></svg>");
      background-color: var(--iui-color-icon-muted);
    }
  }

  &.iui-avatar-count {
    background-color: var(--iui-color-background);
    color: var(--iui-color-text-muted);

    &::before {
      box-shadow: inset 0 0 0 var(--iui-size-3xs) var(--iui-color-border);
    }
  }

  @include iui-avatar-size;

  &:where(.iui-small) {
    @include iui-avatar-size($size: l, $font-size: var(--iui-font-size-0));
  }

  &:where(.iui-large) {
    @include iui-avatar-size($size: 2xl, $font-size: var(--iui-font-size-3));
  }

  &:where(.iui-x-large) {
    @include iui-avatar-size($size: 3xl, $font-size: var(--iui-font-size-4));
  }
}

// ----------------------------------------------------------------------------

@mixin iui-avatar-margins {
  .iui-avatar:not(:first-child) {
    margin-inline-start: var(--iui-size-2xs);

    &.iui-small {
      margin-inline-start: var(--iui-size-3xs);
    }

    &.iui-large {
      margin-inline-start: var(--iui-size-xs);
    }

    &.iui-x-large {
      margin-inline-start: var(--iui-size-s);
    }
  }
}

.iui-avatar-list {
  display: inline-flex;
  flex-wrap: wrap;

  @include iui-avatar-margins;

  &.iui-stacked {
    .iui-avatar:not(:first-child) {
      margin-inline-start: calc(0px - var(--iui-size-2xs));
      box-shadow: 0 0 0 var(--iui-size-2xs) var(--iui-color-background);

      &.iui-small {
        margin-inline-start: calc(0px - var(--iui-size-3xs));
        box-shadow: 0 0 0 var(--iui-size-3xs) var(--iui-color-background);
      }

      &.iui-large {
        margin-inline-start: calc(0px - var(--iui-size-xs));
      }

      &.iui-x-large {
        margin-inline-start: calc(0px - var(--iui-size-s));
      }
    }

    &.iui-animated {
      @media (prefers-reduced-motion: no-preference) {
        .iui-avatar {
          transition: margin-left var(--iui-duration-2) ease-out;
        }
      }

      &:hover {
        @include iui-avatar-margins;
      }
    }
  }
}

